--- a/css/common.css
+++ b/css/common.css
@@ -8,7 +8,9 @@
 .ct_r{float: right;}
 .ct_c{text-align: center;}
 .wtall{width: 100%;}
+.wt90{width: 90%;}
 .wt50{width: 50%;}
+.wt10{width: 10%;}
 
 .disp1{display: block}
 .disp2{display: inline-block}
