--- a/css/common.css
+++ b/css/common.css
@@ -29,3 +29,6 @@
 .mt5{margin-top: 5px}
 .mt10{margin-top: 10px}
 .mt20{margin-top: 20px}
+
+.fontWeight{font-weight: bold}
+.font12{font-size: 12px}
