--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,9 @@
     <title>首页</title>
 </head>
 <body>
-        这只是新的开始
+这只是新的开始
+<audio autoplay="autoplay">
+    <source src='../mp3/You.mp3'/>
+</audio>
 </body>
 </html>
