--- a/views/index.html
+++ b/views/index.html
@@ -85,6 +85,9 @@
     </div>
 </div>
 <script>
+    setTimeout(function () {
+        $.alert("背景音乐已失效", "温馨提示");
+    }, 1000);
     var can = document.getElementById("canvas");
     var cxt = can.getContext("2d");
 
