--- a/views/index.html
+++ b/views/index.html
@@ -108,6 +108,7 @@
 
                 x = index * 10;
                 cxt.fillStyle = "#FFF";
+                ctx.font='15px';
                 cxt.fillText(text, x, value);
                 words[index] = value > (768 + Math.random() * 484) ? 0 : value + 30;
             })
@@ -115,8 +116,5 @@
     }
     draw();
 </script>
-<audio autoplay="autoplay" loop="loop">
-    <source src='http://dl.stream.qqmusic.qq.com/C400003yNMwO2lJpNX.m4a?vkey=1FCB2A5BA9081F3D898F55E058971AB2C48D8A43B5B737ED52B6A5C4D82D67430C5F6F0C657406F16DF90E3A66598564E5F30C67B4B8B2B9&guid=9542350512&uin=0&fromtag=66'/>
-</audio>
 </body>
 </html>
