下落字体修改

--- a/views/index.html
+++ b/views/index.html
@@ -108,7 +108,7 @@
 
                 x = index * 10;
                 cxt.fillStyle = "#FFF";
-                ctx.font='15px';
+                cxt.font='15px';
                 cxt.fillText(text, x, value);
                 words[index] = value > (768 + Math.random() * 484) ? 0 : value + 30;
             })
