--- a/views/index.html
+++ b/views/index.html
@@ -112,9 +112,9 @@
                     //随机选择一个字母
                     // text = String.fromCharCode(65 + Math.ceil(Math.random() * 57));
                     if (change) {
-                        text = '♥♡♥♡♥';
+                        text = '♥';
                     } else {
-                        text = '♡♥♥ ♡♡♥';
+                        text = '♡';
                     }
 
                     x = index * 10;
