心形交替出现

--- a/views/index.html
+++ b/views/index.html
@@ -113,8 +113,10 @@
                     // text = String.fromCharCode(65 + Math.ceil(Math.random() * 57));
                     if (change) {
                         text = '♥';
+                        change=false;
                     } else {
                         text = '♡';
+                        change=true;
                     }
                     x = index * 10;
                     cxt.fillStyle = "#FFF";
