--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="screen-orientation" content="portrait">
+    <meta name="x5-orientation" content="portrait">
+    <meta name="full-screen" content="yes">
+    <meta name="x5-fullscreen" content="true">
     <link rel="stylesheet" href="../css/wda.css">
     <script type="text/javascript" src="../js/jquery/jquery-2.2.0.min.js"></script>
     <title>首页</title>
