--- a/views/index.html
+++ b/views/index.html
@@ -129,9 +129,8 @@
         }
 
         $("#nextPage").click(function () {
-            $.alert("进入下一个页面", "温馨提示",function () {
-                window.location.href = "phrase.html"
-            });
+            alert("进入下一个页面");
+            window.location.href = "phrase.html"
         });
     });
 
