--- a/views/phrase.html
+++ b/views/phrase.html
@@ -17,7 +17,9 @@
             margin-top: 150px;
             position: relative;
             animation: bodyContent1 5s;
+            -webkit-animation: bodyContent1 5s;
             animation-fill-mode: forwards;
+            -webkit-animation-fill-mode: forwards;
             border: 0;
         }
 
@@ -28,8 +30,70 @@
             margin-top: 150px;
             position: relative;
             animation: bodyContent2 5s;
+            -webkit-animation: bodyContent2 5s;
             animation-fill-mode: forwards;
+            -webkit-animation-fill-mode: forwards;
             border: 0;
+        }
+
+        @keyframes bodyContent1 {
+            0% {
+                background: yellow;
+                left: 0;
+                top: 0;
+                -webkit-transform: rotate(20deg)
+            }
+            25% {
+                background: cornflowerblue;
+                left: 200px;
+                top: 0;
+            }
+            50% {
+                background: pink;
+                left: 200px;
+                top: 200px;
+                -webkit-transform: rotate(360deg);
+            }
+            75% {
+                background: black;
+                left: 0;
+                top: 200px;
+            }
+            100% {
+                background: slategray;
+                left: 150px;
+                top: 100px;
+            }
+        }
+
+        @keyframes bodyContent2 {
+            0% {
+                background: yellow;
+                right: 0;
+                top: 0;
+                -webkit-transform: rotate(-20deg)
+            }
+            25% {
+                background: cornflowerblue;
+                right: 200px;
+                top: 0;
+            }
+            50% {
+                background: pink;
+                right: 200px;
+                top: 200px;
+                -webkit-transform: rotate(-360deg);
+            }
+            75% {
+                background: black;
+                right: 0;
+                top: 200px;
+            }
+            100% {
+                background: slategray;
+                right: 150px;
+                top: 148px;
+            }
         }
 
         @-webkit-keyframes bodyContent1 {
