手机QQ兼容性

--- a/views/phrase.html
+++ b/views/phrase.html
@@ -41,7 +41,7 @@
                 background: yellow;
                 left: 0;
                 top: 0;
-                -webkit-transform: rotate(20deg)
+                transform: rotate(20deg)
             }
             25% {
                 background: cornflowerblue;
@@ -52,7 +52,7 @@
                 background: pink;
                 left: 200px;
                 top: 200px;
-                -webkit-transform: rotate(360deg);
+                transform: rotate(360deg);
             }
             75% {
                 background: black;
@@ -71,7 +71,7 @@
                 background: yellow;
                 right: 0;
                 top: 0;
-                -webkit-transform: rotate(-20deg)
+                transform: rotate(-20deg)
             }
             25% {
                 background: cornflowerblue;
@@ -82,7 +82,7 @@
                 background: pink;
                 right: 200px;
                 top: 200px;
-                -webkit-transform: rotate(-360deg);
+                transform: rotate(-360deg);
             }
             75% {
                 background: black;
