--- a/views/phrase.html
+++ b/views/phrase.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <script type="text/javascript" src="../js/jquery/jquery-2.2.0.min.js"></script>
     <style>
