每日知识点

--- a/views/dayTime.html
+++ b/views/dayTime.html
@@ -3,14 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        h4 {
+            text-indent: 20px;
+        }
+
+        p {
+            text-indent: 40px;
+        }
+    </style>
 </head>
 <body>
-    一、Linux常用命令
+<h3>一、Linux常用命令</h3>
+<h4>1、新建文件夹</h4>
+<p>mkdir 文件夹名称 eg: mkdir wda</p>
+<h4>2、复制文件夹</h4>
+<p>①、cp -rf wda/* wda2 注意：/* 代表该文件夹下所有的内容</p>
+<p>②、cp -rf wda wda2 注意：wda和wda2之间有空格</p>
 
-        1、新建文件夹
-            mkdir 文件夹名称  eg: mkdir wda
-        2、复制文件夹
-            ①、cp -rf wda/* wda2   注意：/* 代表该文件夹下所有的内容
-            ②、cp -rf wda wda2  注意：wda和wda2之间有空格
+
 </body>
 </html>
