--- a/views/dayTime.html
+++ b/views/dayTime.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>每日一点点</title>
     <style>
         h4 {
             text-indent: 20px;
