--- a/views/tools.html
+++ b/views/tools.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>常用插件整理</title>
     <style>
         p {
             text-indent: 40px;
