测试页面提交

--- a/views/test.html
+++ b/views/test.html
@@ -22,7 +22,7 @@
             line-height: 40px;
             text-align: center;
         }
-        .txtHide div{
+        .txtHide div,span{
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
