--- a/views/js/index.html
+++ b/views/js/index.html
@@ -2,16 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>JavaScript模块</title>
 </head>
 <body>
-<h3>1、绝对值-Math.abs()的使用</h3>
-    <pre>
-        var a = -2;
-        var b = Math.abs(a);
-        //结果如下
-        b=2;
-    </pre>
+<a href="Math.html">Math对象方法</a>
 <hr>
 </body>
 </html>
