--- a/views/js/index.html
+++ b/views/js/index.html
@@ -5,7 +5,7 @@
     <title>JavaScript模块</title>
 </head>
 <body>
-<a href="Math.html">Math对象方法</a>
+<a href="Math.html">1、Math对象方法</a>
 <hr>
 </body>
 </html>
