--- a/views/nest/index.html
+++ b/views/nest/index.html
@@ -10,7 +10,7 @@
             overflow: hidden;
         }
 
-        canvas {
+        #canvas {
             background-color: #000;
             position: absolute;
             top: 50%;
@@ -26,7 +26,7 @@
     window.onload = function () {
         var bodyCan = document.getElementById("bodyCanvas");
         var can = document.getElementById("canvas");
-        if (can.getContext) {
+        if (bodyCan.getContext) {
             var bodyCxt = bodyCan.getContext("2d");
             var cxt = can.getContext("2d");
 
@@ -34,7 +34,7 @@
             var w = bodyCan.width = window.screen.width;
             var h = bodyCan.height = window.screen.height;
 
-            can.width = can.height = w * 0.8;
+            can.width = can.height = w / 2;
 
             //背景图
             bodyCxt.fillStyle = "#000";
@@ -43,7 +43,7 @@
             var colorArray = ["#FFF", "#000", "#FFF", "#000", "#FFF", "#000", "#FFF", "#000", "#FFF", "#000", "#FFF", "#000", "#FFF", "#000", "#FFF", "#000", "#FFF", "#000", "#FFF", "#000"];
             for (var i = 0; i < 20; i++) {
                 cxt.fillStyle = colorArray[i];
-                cxt.fillRect(10 * (i + 1), 10 * (i + 1), w * 0.8 - 2 * (10 * (i + 1)), w * 0.8 - 2 * (10 * (i + 1)));
+                cxt.fillRect(10 * (i + 1), 10 * (i + 1), w / 2 - 2 * (10 * (i + 1)), w / 2 - 2 * (10 * (i + 1)));
             }
         } else {
             alert("您的浏览器不支持canvas标签");
